improvied initialization sql script support for begin and end blocks